--- a/templates/contact.html
+++ b/templates/contact.html
@@ -19,6 +19,7 @@
       <h5 class="m-3 mr-md-auto font-weight-normal">Expense Tracker </h5>
 
       <nav class="m-2 my-md-0 mr-md-3">
+        <a class="py-2 m-2 text-dark" href="/home">Home</a>
         <a class="py-2 m-2 text-dark" href="/">Login</a>
         <a class="py-2 m-2 text-dark" href="/register">Register</a>
       </nav>
@@ -92,7 +93,7 @@
                 <script>
                   document.write(new Date().getFullYear());
                 </script>
-                All rights reserved | Santosh
+                All rights reserved | ExpenseApp, Inc
               </p>
             </div>
 
