--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -6,15 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/style.css') }}">
-
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/habibmhamadi/multi-select-tag/dist/css/multi-select-tag.css">
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <script src='https://cdn.plot.ly/plotly-2.16.1.min.js'></script>
-        <script src='https://cdn.plot.ly/plotly-latest.min.js'></script> <!-- Plotly CDN -->
-        <script src="{{ url_for('static', filename='js/script.js') }}"></script> <!-- Local JS -->
         <title>Expense Tracker - Analysis</title>
     </head>
-    <body>
+    <body class="body">
      <div class="bg-nav d-flex flex-column flex-md-row align-items-center pb-0 mb-0 border-bottom">
       <h5 class="m-3 mr-md-auto font-weight-normal"><a href="/" style="text-decoration : none">Expense Tracker - {{ user_name }}</a></h5>
 
@@ -28,17 +25,37 @@
     </div>
 
      <div class="container">
-         <h1>Dashboard</h1>
-         <div class="row">
-             <div class="col-md-8">
-                 <div id='chart' class='chart'></div>
-             </div>
-             <div class="col-md-4">
-                 <div id='chart2' class='chart'></div>
-             </div>
-         </div>
-         <div id="myDiv">
+         <div class="row my-3">
+             <div class="col">
+                 <div class="row">
+                     <div class="col-auto goal-panel text-center m-2">
+                         <div id="pie" class="chart"></div>
+                     </div>
+                     <div class="col-5 goal-panel m-2">
+                        <div id="stack_bar" class="chart"></div>
+                     </div>
+                     <div class="col-4 goal-panel m-2">
+                        <div id="line" class="graph"></div>
+                     </div>
+                 </div>
+                 <div class="row my-2">
+                     <div class="col-5 goal-panel mx-3">
+                         <div id="scatter" class="chart m-2"></div>
+                     </div>
+                     <div class="col-6 goal-panel mx-3">
+                         <div id="heat" class="chart m-2"></div>
+                     </div>
+                 </div>
+                 <div class="row my-2">
+                     <div class="col-7 goal-panel mx-2">
+                         <div id="month_bar" class="chart m-2"></div>
+                     </div>
+                     <div class="col-4 goal-panel mx-2">
+                         <div id="sun" class="chart m-2"></div>
+                     </div>
+                 </div>
 
+             </div>
          </div>
      </div>
 
@@ -48,14 +65,29 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-   </body>
-    <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
+     <script src='https://cdn.plot.ly/plotly-2.16.1.min.js'></script>
+     <script src='https://cdn.plot.ly/plotly-latest.min.js'></script> <!-- Plotly CDN -->
+     <script src="{{ url_for('static', filename='js/script.js') }}"></script> <!-- Local JS -->
+     <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
+     <script src="https://cdn.jsdelivr.net/gh/habibmhamadi/multi-select-tag/dist/js/multi-select-tag.js"></script>
+    </body>
     <script type='text/javascript'>
-      var graphs = {{graphJSON | safe}};
-      var graphs2 = {{graphJSON2 | safe}};
-      Plotly.plot('chart',graphs,{});
-      Plotly.plot('chart2',graphs2,{});
+      var bar = {{bar | safe}};
+      var pie = {{pie | safe}};
+      var line_graph = {{line | safe}};
+      var scatter_graph = {{scatter | safe}};
+      var heat_graph = {{heat | safe}};
+      var month_graph = {{month_bar | safe}};
+      var sun_graph = {{sun | safe}};
+
+<!--Plotly.plot('div_id',data,{});-->
+      Plotly.plot('pie',pie,{});
+      Plotly.plot('stack_bar',bar,{});
+      Plotly.plot('line',line_graph,{});
+      Plotly.plot('scatter',scatter_graph,{});
+      Plotly.plot('heat',heat_graph,{});
+      Plotly.plot('month_bar',month_graph,{});
+      Plotly.plot('sun',sun_graph,{});
+
     </script>
-
-
 </html>
