--- a/templates/profile.html
+++ b/templates/profile.html
@@ -24,40 +24,51 @@
       </nav>
          <a class="btn m-2 btn-outline-warning" href="/logout">Logout</a>
     </div>
+     {% for message in get_flashed_messages() %}
+         <div class="alert alert-warning alert-dismissible fade show my-1" id="alert" role="alert">
+                    {{ message }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+         {% endfor %}
 
      <div class="container rounded bg-white mt-5 mb-5">
         <div class="row">
             <div class="col-md-3 border-right">
-                <div class="d-flex flex-column align-items-center text-center p-3 py-3"><img class="rounded-circle mt-5" width="150px" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg"><span class="font-weight-bold">Edogaru</span><span class="text-black-50">edogaru@mail.com.my</span><span> </span></div>
+                <div class="d-flex flex-column align-items-center text-center p-3 py-3">
+                    <img class="rounded-circle mt-5" width="150px" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
+                    <span class="font-weight-bold">{{ user_name }}</span>
+                    <span class="text-black-50">{{ email }}</span>
+                    <span> </span>
+                </div>
             </div>
             <div class="col-md-6 border-right">
                 <div class="p-3 p-2">
                     <div class="d-flex justify-content-between align-items-center mb-3">
                         <h4 class="text-right">Profile Settings</h4>
                     </div>
-                    <div class="row mt-2">
-                        <div class="col-md-6"><label class="labels">Name</label><input type="text" class="form-control" placeholder="first name" value=""></div>
-                        <div class="col-md-6"><label class="labels">Surname</label><input type="text" class="form-control" value="" placeholder="surname"></div>
-                    </div>
                     <div class="row mt-3">
-                        <div class="col-md-12"><label class="labels">Mobile Number</label><input type="text" class="form-control" placeholder="enter phone number" value=""></div>
-                        <div class="col-md-12"><label class="labels">Email ID</label><input type="text" class="form-control" placeholder="enter email id" value=""></div>
-                        <div class="col-md-12"><label class="labels">Education</label><input type="text" class="form-control" placeholder="education" value=""></div>
+                        <form class="form" method="post" action="/updateprofile">
+                            <label>Full Name</label><br>
+                            <input type="text" class="form-control" name="name" value="{{ user_name }}" required><br>
+                            <label>Email</label><br>
+                            <input type="email" class="form-control" name="email" value="{{ email }}" required><br><br>
+                            <input type="submit" class="form-control btn btn-primary btn-block btn-lg" value="Save">
+                        </form>
                     </div>
-                    <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button">Save Profile</button></div>
                 </div>
             </div>
-<!--            <div class="col-md-4">-->
-<!--                <div class="p-3 py-5">-->
-<!--                    <div class="d-flex justify-content-between align-items-center experience"><span>Edit Experience</span><span class="border px-3 p-1 add-experience"><i class="fa fa-plus"></i>&nbsp;Experience</span></div><br>-->
-<!--                    <div class="col-md-12"><label class="labels">Experience in Designing</label><input type="text" class="form-control" placeholder="experience" value=""></div> <br>-->
-<!--                    <div class="col-md-12"><label class="labels">Additional Details</label><input type="text" class="form-control" placeholder="additional details" value=""></div>-->
-<!--                </div>-->
-<!--            </div>-->
         </div>
     </div>
     </div>
     </div>
+     <script type="text/javascript">
+        setTimeout(function () {
+                    // Closing the alert
+                    $('#alert').alert('close');
+                }, 3000);
+    </script>
 
 
     <!-- Optional JavaScript -->
