small fixes in contact page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -399,3 +399,15 @@ form.contFrm {
     color: #fff;
     background: #172042;
 }
+
+.fa-check-circle {
+  color: green;
+}
+
+.width-auto {
+    width: auto;
+  }
+
+.width-100 {
+    width: 100%;
+  }
