--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -39,19 +39,19 @@
                      </div>
                  </div>
                  <div class="row my-2">
-                     <div class="col-5 goal-panel mx-3">
-                         <div id="scatter" class="chart m-2"></div>
+                     <div class="col-7 goal-panel m-2">
+                         <div id="month_bar" class="chart"></div>
                      </div>
-                     <div class="col-6 goal-panel mx-3">
-                         <div id="heat" class="chart m-2"></div>
+                     <div class="col-4 goal-panel m-2">
+                         <div id="sun" class="chart"></div>
                      </div>
                  </div>
-                 <div class="row my-2">
-                     <div class="col-7 goal-panel mx-2">
-                         <div id="month_bar" class="chart m-2"></div>
+                 <div class="row">
+                     <div class="col-md-6 goal-panel text-center m-2">
+                         <div id="scatter" class="chart"></div>
                      </div>
-                     <div class="col-4 goal-panel mx-2">
-                         <div id="sun" class="chart m-2"></div>
+                     <div class="col-md-5 goal-panel m-2">
+                        <div id="heat" class="chart"></div>
                      </div>
                  </div>
 
