--- a/templates/contact.html
+++ b/templates/contact.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/style.css') }}">
 
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -35,30 +35,28 @@
                   <h1 class="section-title">Contact us</h1>
 
                   <ul class="contact-ul">
-                    <li><i class="fa fa-location-dot"></i> 32, Vasant Kunj, Delhi</li>
+                    <li><i class="material-icons">home</i> 32, Vasant Kunj, Delhi</li>
 
                     <li>
-                      <i class="fa fa-phone"></i>
-                      <a href="tel:08510000000"><b>0255000XXXX</b></a>,
-                      <a href="tel:08510000000"><b>0251600XXXX</b></a>
+                      <i class="material-icons">call</i>
+                      <a href="tel:08510000000"><b>08510000000</b></a>,
+                      <a href="tel:08510000000"><b>08560000000</b></a>
                     </li>
 
                     <li>
-                      <i class="fa-solid fa-envelope"></i>
+                      <i class="material-icons">email</i>
                       <a href="mailto:help@expense.com"><b> help@expense.com</b></a>
                     </li>
                   </ul>
 
                   <span>
-                    <a href="#" class="fb"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="#" class="insta"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#" class="twitter"><i class="fa-brands fa-twitter"></i></a>
+                      <i class="fa-brands fa-facebook"></i>
                   </span>
                 </div>
               </div>
 
               <div class="col-md-6">
-                <form action="#" class="contFrm" method="POST">
+                <form action="/feedback" class="contFrm" method="POST">
                   <div class="row">
                     <div class="col-sm-6">
                       <input type="text" name="name" placeholder="Your Name" class="inptFld" required />
@@ -77,7 +75,7 @@
                     </div>
 
                     <div class="col-12">
-                      <textarea class="inptFld" rows="" cols="" placeholder="Your Message..." required></textarea>
+                      <textarea class="inptFld" name="message" placeholder="Your Message..." required></textarea>
                     </div>
 
                     <div class="col-12">
