--- a/templates/login.html
+++ b/templates/login.html
@@ -25,7 +25,7 @@
 <!--        dividing above row into two columns 8 and 4 (12 is max grid shape)-->
         <div class="col-md-8">
 <!--          adding text in first columns-->
-          <h1 class="text-light display-4 mt-50" style="font-size:80px">Bring the power of Analytics to your life and save money</h1>
+          <h1 class="text-light display-4 mt-50" style="font-size:70px">Take charge of your finances with advanced expense tracking and visualization capabilities</h1>
         </div>
         <div class="col-md-4">
 <!--          this is second columns, adding login section in this -->
